# T-DT-2024-Radar

./: .gitignore  LICENSE  README.md
config/: RM2024_Points.yaml  camera_params.yaml  detect_params.yaml  out_matrix.yaml
model/TensorRT/: readme
src/fusion/debug_map/: CMakeLists.txt  debug_map.cpp  package.xml
src/fusion/kalman_filter/: CMakeLists.txt  package.xml
src/fusion/kalman_filter/include/: filter_plus.h  kalman_filter.h
src/fusion/kalman_filter/src/: kalman_filter.cpp
src/interface/vision_interface/: CMakeLists.txt  package.xml
src/interface/vision_interface/msg/: DetectResult.msg  MatchInfo.msg  Message.msg  Radar2Sentry.msg  RadarWarn.msg  Sentry2Radar.msg
src/lidar/cluster/: CMakeLists.txt  package.xml
src/lidar/cluster/include/: cluster.h
src/lidar/dynamic_cloud/: CMakeLists.txt  package.xml
src/lidar/dynamic_cloud/include/: dynamic_cloud.h
src/lidar/dynamic_cloud/launch/: dynamic_cloud.launch.py  dynamic_cloud_rviz.launch.py  lidar.launch.py  track.launch.py
src/lidar/dynamic_cloud/src/: dynamic_cloud.cpp
src/lidar/localization/: CMakeLists.txt  package.xml
src/lidar/localization/src/: localization.cpp
src/lidar/tracker/src/: cluster.cpp
src/livox_driver/livox_ros2_driver/config/: livox_lidar_config.json
src/livox_driver/livox_ros2_driver/livox_ros2_driver/: lddc.cpp
src/tdt_vision/: CMakeLists.txt  package.xml
src/tdt_vision/calibrate/include/: calibrate.h
src/tdt_vision/calibrate/src/: calibrate.cpp
src/tdt_vision/cmake/modules/: libnvinferConfig.cmake
src/tdt_vision/detect/include/: detect.h
src/tdt_vision/detect/src/: detect.cpp
src/tdt_vision/launch/: calib_rosbag.launch.py  map_server_launch.py  run_rosbag.launch.py
src/tdt_vision/maps/: map.yaml
src/tdt_vision/radar_utils/: radar_utils.cpp  radar_utils.h
src/tdt_vision/resolve/include/: resolve.h
src/tdt_vision/resolve/src/: resolve.cpp
src/tdt_vision/yolo/: CMakeLists.txt  classify.cu  classify.hpp  infer.cu  infer.hpp  logging.h  yolo.cu  yolos.hpp
src/utils/: onnx2trt.py
src/utils/rosbag_player/: CMakeLists.txt  package.xml  rosbag_player.cpp
watchDog/: calib.sh  camera.sh  lidar.sh  livox.sh  map.sh
