<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name> tdt_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shenxuewen0127@gmail.com">shenxw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>OpenCV</depend>
  <depend>roborts_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_interface</depend>
  <depend>perception_interface</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_bullet</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>PCL</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>


  <!-- <depend>builtin_interfaces</depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
